--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy .NET 9 to EC2 (Windows)
+name: Build and Deploy .NET 9 via SSM
 
 on:
   push:
@@ -6,37 +6,37 @@ on:
       - master
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout source
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Setup .NET 9
-      uses: actions/setup-dotnet@v4
+    - uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '9.0.x'
-
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
 
     - name: Publish
       run: dotnet publish -c Release -o publish
 
-    - name: Deploy to EC2 via WinRM
-      uses: crazy-max/winrm-action@v2
+    - name: Configure AWS
+      uses: aws-actions/configure-aws-credentials@v4
       with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USERNAME }}
-        password: ${{ secrets.EC2_PASSWORD }}
-        port: 5985
-        script: |
-          iisreset /stop
-          Remove-Item -Recurse -Force "${{ secrets.DEPLOY_PATH }}\*" -ErrorAction SilentlyContinue
-          Copy-Item -Recurse -Force "publish\*" "${{ secrets.DEPLOY_PATH }}"
-          iisreset /start
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
+    - name: Upload artifacts to S3
+      run: |
+        aws s3 sync publish s3://my-dotnet-deploy-bucket/latest --delete
+
+    - name: Deploy via SSM
+      run: |
+        aws ssm send-command ^
+          --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" ^
+          --document-name "AWS-RunPowerShellScript" ^
+          --parameters commands="
+            iisreset /stop;
+            aws s3 sync s3://my-dotnet-deploy-bucket/latest '${{ secrets.DEPLOY_PATH }}' --delete;
+            iisreset /start
+          "
