--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,5 +32,14 @@ jobs:
 
     - name: Deploy via SSM
       run: |
-        aws ssm send-command --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" --document-name "AWS-RunPowerShellScript" --parameters commands="iisreset /stop; aws s3 sync s3://my-dotnet-deploy-bucket/latest '${{ secrets.DEPLOY_PATH }}' --delete; iisreset /start"
-
+        aws ssm send-command `
+          --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" `
+          --document-name "AWS-RunPowerShellScript" `
+          --parameters '{
+            "commands": [
+              "iisreset /stop",
+              "aws s3 sync s3://my-dotnet-deploy-bucket/latest \"${{ secrets.DEPLOY_PATH }}\" --delete",
+              "iisreset /start"
+            ]
+          }'
+    
