--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,8 +35,10 @@ jobs:
           --targets "Key=instanceIds,Values=${{ secrets.EC2_INSTANCE_ID }}" \
           --document-name "AWS-RunPowerShellScript" \
           --comment "Deploy .NET app" \
-          --parameters "commands=[
-            \"iisreset /stop\",
-            \"aws s3 sync s3://my-dotnet-deploy-bucket/latest C:\\inetpub\\sites\\MyDotNetApp \",
-            \"iisreset /start\"
-          ]"
+          --parameters 'commands=[
+            "iisreset /stop",
+            "aws s3 sync s3://my-dotnet-deploy-bucket/latest C:\\inetpub\\sites\\MyDotNetApp --delete --region '${{ secrets.AWS_REGION }}'",
+            "if ($LASTEXITCODE -ne 0) { throw ''S3 sync failed'' }",
+            "iisreset /start"
+          ]'
+
